initial methods update!
Please feel free to read over and edit!

--- a/group_proposal.ipynb
+++ b/group_proposal.ipynb
@@ -44,6 +44,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7ab4056a-eea9-4551-be7e-f5d354326df7",
+   "metadata": {},
+   "source": [
+    "To conduct our data analysis, we will use knn classification techniques to try to classify whether a patient has heart disease. In our data set, this variable we are looking to predict is represented by the num column (where 0 means healthy and 1-4 means sick). \n",
+    "\n",
+    "Firstly, we will **select** the variables we wish to use as predictors, such as age, sex, trestbps (resting blood pressure), cholesteral, and max heart rate. For ease of use, we are using only the variables that are giving numeric values. We will put all of these variables into a **recipe** and both **scale** and **center** all predictors. \n",
+    "\n",
+    "Next, we will create a **model specification** that will use straight line distance and tune for the best k value. \n",
+    "\n",
+    "After that, we will perform a **5-fold cross-validation** on the training set and create a **workflow analysis** that includes both our recipe and model specification. We will try all integer k-values from 2 - 10. This is to determine what the most effective/accurate k-value to use is. \n",
+    "\n",
+    "When that is done, we will plot the results and visually see how many neighbours to use.\n",
+    "\n",
+    "Finally, we will create our model by making a new **model specification** that will use straight line distance and the value of K that we determined previously. We will add both this new specification and the recipe we made before to a new **workflow**. This new workflow will also fit our data to the training data. We will use this model to **predict** the values in our testing set. We will also check our model's **accuracy**, **precision**, and **recall** using **metrics** and the **confusion matrix**.\n",
+    "\n",
+    "One of the ways that we will visualize these results is by using scatter plots to compare two variables against the class we are predicting (represented by colour) and then plot some test observations. By doing this, we will be able to visually see whether our model is working well; we can look and see whether our model seems to have correctly predicted what class of heart disease our patient has based on the colours of the k-nearest neighbours surrounding our point."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c819bc95-0c86-46b9-9d03-d5e8a403fc6f",
    "metadata": {},
    "source": [
