--- a/group_proposal.ipynb
+++ b/group_proposal.ipynb
@@ -22,6 +22,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3c6f4953-7b36-4122-b1c9-6e8923dc614f",
+   "metadata": {},
+   "source": [
+    "The data set we will be using contains information on patients, including age, sex, blood pressure, cholestrol levels, and more. These attributes will be used to predict whether a patients has heart disease. In this proposal, will use machine learning algorithms to analyze the dataset and develop predictive models for heart disease diagnosis. The goal of this is to provide a tool to healthcare professionals to assist in early detection of heart disease, thus aiding in the management of heart disease. \n",
+    "\n",
+    "The question this model will try to answer is: can we accurately predict the presence or absense of heart disease based on demographic and clinical attributes using the provided dataset. \n",
+    "\n",
+    "The data set containts information on 303 patients with 13 features about each one. The presence of heart disease in paients is the 'goal' field, with integers ranging from 0 (no heart disease) to 4. Patient names and social security numbers have been removed and replaced with dummy values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "61309433-c494-4623-9e03-aef27f694248",
    "metadata": {},
    "source": [
