--- a/group_proposal.ipynb
+++ b/group_proposal.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "To conduct our data analysis, we will use knn to try to classify whether a patient has heart disease. In our dataset, the variable we are looking to predict is represented by the num column (where 0 means healthy and 1-4 means sick). \n",
     "\n",
-    "First, we will **select** the variables we wish to use as predictors. We will use age, sex, trestbps (resting blood pressure), cholesteral, and max heart rate as our predictors and an exploratory analysis of these predictors was conducted above. For ease of use, we are using only the variables that are giving numeric values. We will put all of these variables into a **recipe** and both **scale** and **center** all predictors. \n",
+    "First, we will **select** the variables we wish to use as predictors. We will use age, sex, trestbps (resting blood pressure), cholesterol, and max heart rate as our predictors and an exploratory analysis of these predictors was conducted above. For ease of use, we are using only the variables that are giving numeric values. We will put all of these variables into a **recipe** and both **scale** and **center** all predictors. \n",
     "\n",
     "Next, we will create a **model specification** that will use straight line distance and tune for the best k value. \n",
     "\n",
