Added outcomes and significance

--- a/group_proposal.ipynb
+++ b/group_proposal.ipynb
@@ -54,9 +54,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f5efbe56-efb4-48eb-a90c-97ae8d1fa2cb",
+   "metadata": {},
+   "source": [
+    "For this study, we hope to discover particular predictors of heart disease, which might range from age and gender to blood pressure and cholesterol levels.\n",
+    "\n",
+    "This would result in a more efficient and simplified method of identifying potential patients with heart disease simply by running the variables (age, blood pressure, cholesterol levels, etc.) to determine if someone would require additional investigation by scanning through a dataset of patients. This helps with public health policy development and risk assessment.\n",
+    "\n",
+    "By screening patient data and determining who requires more investigation owing to a possible raised risk of heart disease, we may investigate whether other factors are present in those patients that are also associated with an increased risk of heart disease."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2417baac-4d4f-415a-be3f-f0ffcc4da1ad",
+   "id": "2b80ac4d-1b1f-4b64-991f-aee6e8c5b926",
    "metadata": {},
    "outputs": [],
    "source": []
