finalized, under the word count
that took longer than expected (i feel die)

--- a/group_proposal.ipynb
+++ b/group_proposal.ipynb
@@ -5,7 +5,7 @@
    "id": "b0b8befe",
    "metadata": {},
    "source": [
-    "## Title"
+    "## Classification of Heart Disease Diagnosis"
    ]
   },
   {
@@ -13,11 +13,7 @@
    "id": "d9c3d1b6",
    "metadata": {},
    "source": [
-    "## Introduction\n",
-    "\n",
-    "- Provide some relevant background information on the topic so that someone unfamiliar with it will be prepared to understand the rest of your proposal\n",
-    "- Clearly state the question you will try to answer with your project\n",
-    "- Identify and describe the dataset that will be used to answer the question"
+    "## Introduction"
    ]
   },
   {
@@ -25,11 +21,11 @@
    "id": "552c4c87",
    "metadata": {},
    "source": [
-    "The data set we will be using contains information on patients, including age, sex, blood pressure, cholestrol levels, and more. These attributes will be used to predict whether a patients has heart disease. In this proposal, will use machine learning algorithms to analyze the dataset and develop predictive models for heart disease diagnosis. The goal of this is to provide a tool to healthcare professionals to assist in early detection of heart disease, thus aiding in the management of heart disease. \n",
+    "Processed Cleveland Data contains patient information including age and blood pressure. These attributes will be used to predict whether a patients has heart disease. In this proposal, we'll use machine learning to analyze the dataset and develop predictive models for heart disease diagnosis. The goal of this is to provide a tool to healthcare professionals to assist in early detection of heart disease. \n",
     "\n",
-    "The question this model will try to answer is: can we accurately predict the presence or absense of heart disease based on demographic and clinical attributes using the provided dataset. \n",
+    "The question this model will try to answer is: can we accurately predict the presence of heart disease based on demographic and clinical attributes using the provided dataset. \n",
     "\n",
-    "The data set containts information on 303 patients with 13 features about each one. The presence of heart disease in paients is the 'goal' field, with integers ranging from 0 (no heart disease) to 4. Patient names and social security numbers have been removed and replaced with dummy values."
+    "The data set containts information on 303 patients with 13 features about each one. The presence of heart disease is shown with integers ranging from 0 (no heart disease) to 4."
    ]
   },
   {
@@ -37,11 +33,7 @@
    "id": "c3841581",
    "metadata": {},
    "source": [
-    "## Preliminary exploratory data analysis\n",
-    "- Demonstrate that the dataset can be read from the web into R \n",
-    "- Clean and wrangle your data into a tidy format\n",
-    "- **Using only training data**, summarize the data in at least one table (this is exploratory data analysis). An example of a useful table could be one that reports the number of observations in each class, the means of the predictor variables you plan to use in your analysis and how many rows have missing data. \n",
-    "- **Using only training data**, visualize the data with at least one plot relevant to the analysis you plan to do (this is exploratory data analysis). An example of a useful visualization could be one that compares the distributions of each of the predictor variables you plan to use in your analysis."
+    "## Preliminary exploratory data analysis"
    ]
   },
   {
@@ -173,9 +165,9 @@
    "id": "5b9e5879",
    "metadata": {},
    "source": [
-    "The above is our inital datatset read from the web. We are using the processed cleveland dataset as it has already been preprocessed -- no additional wrangling is required to make the dataset tidy.\n",
+    "The above is our inital datatset read from the web. We are using the processed cleveland dataset as it has already been preprocessed into a tidy form.\n",
     "\n",
-    "Below, we have selected only the columns that we wish to look at:"
+    "We then select the columns we want:"
    ]
   },
   {
@@ -261,9 +253,7 @@
    "id": "307a8a5d",
    "metadata": {},
    "source": [
-    "We will only be considering the age, sex, trestbps (resting blood pressure), cholesteral, and max heart rate attributes for our predictors as these variables are both important for classifying whether a patient has a healthy heart and easy to understand. \n",
-    "\n",
-    "Now that the data has been filtered to only contain columns of interest, we split it into two subsets -- 75% training and 25% testing. "
+    "We then split our data into 75% training and 25% testing. "
    ]
   },
   {
@@ -504,10 +494,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ee32ed3e-9d0d-4ab7-b5a4-4a42c7a30129",
+   "metadata": {},
+   "source": [
+    "### Training Data Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9f2edfd0",
    "metadata": {},
    "source": [
-    "Using the training data, we can also create a histogram to display the distribution of all our predictor variables. This lets us both visualize what our data looks like and conduct a sanity check to make sure our variables make sense. "
+    "We create a histogram using our training data to display the distribution of all our predictor variables. This lets us visualize our data and make sure our variables make sense. "
    ]
   },
   {
@@ -1678,9 +1676,7 @@
    "id": "7c4c4875",
    "metadata": {},
    "source": [
-    "## Methods\n",
-    "- Explain how you will conduct either your data analysis and which variables/columns you will use. <ins>Note - you do not need to use all variables/columns that exist in the raw data set. In fact, that's often not a good idea. For each variable think: is this a useful variable for prediction?</ins>\n",
-    "- Describe at least one way that you will visualize the results\n"
+    "## Methods\n"
    ]
   },
   {
@@ -1688,19 +1684,17 @@
    "id": "a077b2e3",
    "metadata": {},
    "source": [
-    "To conduct our data analysis, we will use knn to try to classify whether a patient has heart disease. In our dataset, the variable we are looking to predict is represented by the num column (where 0 means healthy and 1-4 means sick). \n",
+    "We will use KNN to classify whether a patient has heart disease. The variable we are looking to predict is represented by the num column. \n",
     "\n",
-    "First, we will **select** the variables we wish to use as predictors. We will use age, sex, trestbps (resting blood pressure), cholesterol, and max heart rate as our predictors and an exploratory analysis of these predictors was conducted above. For ease of use, we are using only the variables that are giving numeric values. We will put all of these variables into a **recipe** and both **scale** and **center** all predictors. \n",
+    "First, we will put the variables we wish to use as predictors into a **recipe** and both **scale** and **center** them. \n",
     "\n",
-    "Next, we will create a **model specification** that will use straight line distance and tune for the best k value. \n",
+    "Next, we will create a **model specification** that will tune for the best k value. \n",
     "\n",
-    "After, we will perform a **5-fold cross-validation** on the training set and create a **workflow analysis** that includes both our recipe and model specification. We will try all integer k-values from 2 - 10. This is to determine what the most effective/accurate k-value to use is. \n",
+    "After, we will perform a **5-fold cross-validation** on the training set and create a **workflow** that includes our recipe and model specification. We will try all integer k-values from 2 - 10 and plot the results to determine the most accurate k-value.\n",
     "\n",
-    "When that is done, we will plot the results and visually see how many neighbours to use.\n",
+    "Finally, we will create our model by adding both a new **model specification** that will use straight line distance and found k and the recipe we made before to a new **workflow**. We will use this model to **predict** the values in our testing set. We will also check our model's **accuracy**, **precision**, and **recall** using **metrics** and the **confusion matrix**.\n",
     "\n",
-    "Finally, we will create our model by making a new **model specification** that will use straight line distance and the value of k that we determined previously. We will add both this new specification and the recipe we made before to a new **workflow**. We will use this model to **predict** the values in our testing set. We will also check our model's **accuracy**, **precision**, and **recall** using **metrics** and the **confusion matrix**.\n",
-    "\n",
-    "One of the ways that we will visualize these results is by using scatterplots to compare two variables against the class we are predicting (represented by colour) and then plot the test observations. By doing this, we will be able to visually see whether our model is working well; we can look and see whether our model seems to have correctly predicted what class of heart disease our patient has based on the colours of the k-nearest neighbours surrounding our point."
+    "We will visualize these results by using scatterplots to compare two variables against the class we are predicting (represented by colour) and then plot the test observations to see whether our model has correctly predicted the class of heart disease."
    ]
   },
   {
@@ -1708,10 +1702,7 @@
    "id": "4cd9bbbe",
    "metadata": {},
    "source": [
-    "## Expected outcomes and significance\n",
-    "- What do you expect to find?\n",
-    "- What impact could such findings have?\n",
-    "- What future questions could this lead to?\n"
+    "## Expected outcomes and significance"
    ]
   },
   {
@@ -1719,12 +1710,18 @@
    "id": "cb5f052f",
    "metadata": {},
    "source": [
-    "For this study, we hope to discover particular predictors of heart disease, which might range from age and gender to blood pressure and cholesterol levels.\n",
+    "Through this study, we hope to discover significant predictors of heart disease.\n",
     "\n",
-    "This would result in a more efficient and simplified method of identifying potential patients with heart disease simply by running the variables (age, blood pressure, cholesterol levels, etc.) to determine if someone would require additional investigation by scanning through a dataset of patients. This helps with public health policy development and risk assessment.\n",
-    "\n",
-    "By screening patient data and determining who requires more investigation owing to a possible raised risk of heart disease, we may investigate whether other factors are present in those patients that are also associated with an increased risk of heart disease."
+    "This would result in being able to identify if someone would require additional investigation in regards to heart disease simply by considering the predictors found. This would further help with public health policy development and risk assessment. Further questions could include expanding the list of predictors. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fac5106-2243-471d-9903-4ffe875d7265",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
